--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
             <div class="card-header text-center">
                 <div class="row">
                     <div class="col-10">
-                        <h2>Hilos en Python With Django</h2>
+                        <h2>Hilos en Python Con Django</h2>
                     </div>
                     <div class="col">
                         <a class="btn btn-primary" href="/" role="button">Empezar de Nuevo</a>
